# IL-marathon

./: .gitignore  docker-compose.yml  environment.yml  package.json  pyproject.toml  readme.md
app/: Dockerfile  main.py
player_example/: index.ts
